# asabe-robot-2023

./: .gitmodules  Important tips about Realsense  README.md  velocity_mode.ino
ROS/src/asabe_robot_description/: CMakeLists.txt  package.xml
ROS/src/asabe_robot_description/config/: control.yaml  control_diff.yaml  control_trajectory_arm.yaml  control_vel_trajectory.yaml  control_vel_trajectory_base.yaml  controllers.yaml  ekf.yaml  joint_names_robot_description.yaml  nav.yaml
ROS/src/asabe_robot_description/launch/: base.launch.py  control.launch.py  control_diff.launch.py  control_mecanum.launch.py  control_trajectory_arm.launch.py  control_vel_trajectory.launch.py  control_vel_trajectory_base.launch.py  display.launch.py  display_mecanum.launch.py  gazebo.launch.py  loc.launch.py  nav.launch.py  nav2_bringup_launch.py  navigation_launch.py  simple_loc.launch.py
ROS/src/asabe_robot_description/maps/: cotton_map.pgm  cotton_map.yaml  map.pgm  map.yaml  map0.pgm
ROS/src/asabe_robot_description/meshes/: Link_arm1.STL  Link_arm2.STL  Link_arm3.STL  Link_arm4.STL  Link_arm5.STL  Link_arm6.STL  Link_mecanum_wheel1.STL  Link_mecanum_wheel2.STL  Link_mecanum_wheel3.STL  Link_mecanum_wheel4.STL  Link_wheel1.STL  Link_wheel2.STL  Link_wheel3.STL  Link_wheel4.STL  mecanum_base_link.STL
ROS/src/asabe_robot_description/rviz/: nav.rviz  urdf.rviz
ROS/src/asabe_robot_description/scripts/: ABE_Gator.csv  control_move.py  detection_test.py  locator.py  move_test.py  nav_to_pose.py  robot_navigator.py
ROS/src/asabe_robot_description/urdf/: base_description.urdf  mecanum_robot_description.urdf  robot_description.csv  robot_description.urdf  robot_description_arm.urdf  robot_description_base.urdf  robot_description_full.urdf  robot_description_org.urdf
ROS/src/asabe_robot_description/world/: competition_board.world
ROS/src/mecanum_hardware/: 99-acmx-serial.rules  CMakeLists.txt  mecanum_hardware.xml  package.xml
ROS/src/mecanum_hardware/src/: MultiWii.cpp  example_imu.c  example_motor_run.c  mecanum_hardware.cpp  serial.cpp
(+242 files in other folders)
