<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>asabe_robot_description</name>
  <version>1.0.0</version>

  <description>URDF Description package for ASABE 2023 robot_description.</description>
  <author email="zhengkun.li@ufl.edu">Zhengkun Li</author>

  <maintainer email="zhengkun.li@ufl.edu">Zhengkun Li</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <depend>urdf</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>